--- a/ar.html
+++ b/ar.html
@@ -14,7 +14,7 @@
 		<a-image src="#photo" height=1.35; opacity=0.95;></a-image>
 		<!--<a-video src="#arboomerang" width="2" height = "2" position = "0 0 -0.7" opacity=0.95;></a-video>-->
 
-		<a-marker-camera type="pattern" preset="hiro"></a-marker-camera>
+		<a-marker-camera type="pattern" patternUrl="https://github.com/Aahanbhatt/aframe/blob/gh-pages/pattern-marker.patt"></a-marker-camera>
 	</a-scene>
 </body>
 </html>
