--- a/ar.html
+++ b/ar.html
@@ -1,9 +1,6 @@
 <html>
-<head>
-	<meta name="apple-mobile-web-app-capable" content="yes">
-</head>
 <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
-<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+<script src="https://github.com/jeromeetienne/AR.js/blob/master/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
 		<!--<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>-->
