--- a/ar.html
+++ b/ar.html
@@ -6,7 +6,7 @@
 		<!--<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>-->
 		<!--<a-text value="hola hermanos, wanna have some tortillas?"></a-text>-->
 		<a-assets>
-			<img id="photo" src="https://github.com/Aahanbhatt/aframe/blob/gh-pages/5.png">
+			<img id="photo" src="https://ucarecdn.com/ad371eb8-e908-4f60-8cd7-ce750be33094/">
 		</a-assets>
 		<a-image src="#photo" height=1.35; opacity=0.95;></a-image>
 		<!--<a-video src="#arboomerang" width="2" height = "2" position = "0 0 -0.7" opacity=0.95;></a-video>-->
