--- a/heart.html
+++ b/heart.html
@@ -9,10 +9,10 @@
 		<!--<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>-->
 		<!--<a-text value="hola hermanos, wanna have some tortillas?"></a-text>-->
 		<a-assets>
-			<img id="photo" src="https://ucarecdn.com/f79d0ba7-7cf6-4053-8f0d-ae0252c86a04/">
+			<img id="heart" src="https://ucarecdn.com/f79d0ba7-7cf6-4053-8f0d-ae0252c86a04/">
 
 		</a-assets>
-		<a-image src="#photo" height=2.0; opacity=0.95;></a-image>
+		<a-image src="#heart" height=2.0; opacity=0.95;></a-image>
 
 
 		<a-marker-camera type="pattern" preset="hiro"></a-marker-camera>
