--- a/heart.html
+++ b/heart.html
@@ -12,10 +12,13 @@
 			<img id="heart" src="https://ucarecdn.com/f79d0ba7-7cf6-4053-8f0d-ae0252c86a04/">
 
 		</a-assets>
+		<a-anchor hit-testing-enabled='true'>
 		<a-image src="#heart" height=2.0; opacity=0.95;></a-image>
+			<a-anchor/>
 
 
 		<a-marker-camera type="pattern" preset="hiro"></a-marker-camera>
+		<a-camera-static/>
 	</a-scene>
 </body>
 </html>
