--- a/VideoAr.html
+++ b/VideoAr.html
@@ -12,7 +12,7 @@
 			<video id="boomerang" autoplay loop="true"  src="https://ucarecdn.com/878f5085-404e-449a-9c5c-ad82af33bdce/">
 
 		</a-assets>
-		<a-video src="#boomerang" height="2.0" width="1.0" opacity=0.95;></a-video>
+		<a-video src="#boomerang" height="2.0" opacity=0.95;></a-video>
 
 
 		<a-marker-camera type="pattern" preset="hiro"></a-marker-camera>
