--- a/arjs-tango.html
+++ b/arjs-tango.html
@@ -4,7 +4,7 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='trackingMethod : best'>
 		<a-anchor hit-testing-enabled='true'>
-			<a-box position='0 0.5 0'></a-box>
+			<a-box color="#14649F" position='0 0.5 0'></a-box>
 		</a-anchor>
 		<a-camera-static/>
 	</a-scene>
