--- a/arjs-tango.html
+++ b/arjs-tango.html
@@ -4,7 +4,7 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='trackingMethod : best'>
 		<a-anchor hit-testing-enabled='true'>
-			<a-box color="red" position='0 2.0 0'></a-box>
+			<a-box color="#8B1A1A" position='0 2.0 0'></a-box>
 		</a-anchor>
 		<a-camera-static/>
 	</a-scene>
